project: -licence improved jvm settings